Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -20,8 +20,8 @@
   * [PRIDEQualityChart PRIDE Quality Chart]
   * [PRIDEXMLJAXB PRIDE XML JAXB]
     * [PRIDEXMLJAXB#About_PRIDE_XML_JAXB About PRIDE XML JAXB]
-    * [PRIDEXMLJAXB#Getting_XML_JAXB Getting PRIDE XML JAXB]
-    * [PRIDEXMLJAXB#Using_XML_JAXB Using PRIDE XML JAXB]
+    * [PRIDEXMLJAXB#Getting_PRIDE_XML_JAXB Getting PRIDE XML JAXB]
+    * [PRIDEXMLJAXB#Using_PRIDE_XML_JAXB Using PRIDE XML JAXB]
     * [PRIDEXMLJAXB#API_Reference API Reference]
     * [PRIDEXMLJAXB#FAQs FAQs]
     * [PRIDEXMLJAXB#Getting_Help Getting Help]
