Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -26,7 +26,13 @@
     * [PRIDEXMLJAXB#FAQs FAQs]
     * [PRIDEXMLJAXB#Getting_Help Getting Help]
     * [PRIDEXMLJAXB#Source_Code Source Code]
-    * [PRIDEXMLJAXB#Screenshots Screenshots]
   * [jmzML jmzML]
   * [PRIDEUtilities PRIDE Utilities]
+    * [PRIDEUtilities#About_PRIDE_Utilities About PRIDE Utilities]
+    * [PRIDEUtilities#Getting_PRIDE_Utilities Getting PRIDE Utilities]
+    * [PRIDEUtilities#Using_mzGraph_Browser Using PRIDE Utilities]
+    * [PRIDEUtilities#API_Reference API Reference]
+    * [PRIDEUtilities#FAQs FAQs]
+    * [PRIDEUtilities#Getting_Help Getting Help]
+    * [PRIDEUtilities#Source_Code Source Code]
   * [XXIndex XXIndex]
