Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -36,3 +36,10 @@
     * [PRIDEUtilities#Getting_Help Getting Help]
     * [PRIDEUtilities#Source_Code Source Code]
   * [XXIndex XXIndex]
+    * [XXIndex#About_XXIndex About XXIndex]
+    * [XXIndex#Getting_XXIndex Getting XXIndex]
+    * [XXIndex#Using_XXIndex Using XXIndex]
+    * [XXIndex#API_Reference API Reference]
+    * [XXIndex#FAQs FAQs]
+    * [XXIndex#Getting_Help Getting Help]
+    * [XXIndex#Source_Code Source Code]
