Edited wiki page PRIDEmzGraphBrowser through web user interface.

--- a/wiki/PRIDEmzGraphBrowser.wiki
+++ b/wiki/PRIDEmzGraphBrowser.wiki
@@ -168,5 +168,6 @@ To come in the future.
 [PRIDEmzGraphBrowser top of page]
 ----
 == Screenshots ==
+(Click on figure to see the full size version)
 
 [PRIDEmzGraphBrowser top of page]
