Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -27,6 +27,12 @@
     * [PRIDEXMLJAXB#Getting_Help Getting Help]
     * [PRIDEXMLJAXB#Source_Code Source Code]
   * [http://code.google.com/p/jmzml/ jmzML]
+    * [http://code.google.com/p/jmzml/#About_jmzML About jmzML]
+    * [http://code.google.com/p/jmzml/#mzML_Viewer_Application mzML Viewer Application]
+    * [http://code.google.com/p/jmzml#Getting_jmzML Getting jmzML]
+    * [http://code.google.com/p/jmzml/wiki/HowToUseJMzML Using jmzML]
+    * [http://code.google.com/p/jmzml#Getting_Help Getting Help]
+    * [http://code.google.com/p/jmzml/source/checkout Source Code]
   * [PRIDEUtilities PRIDE Utilities]
     * [PRIDEUtilities#About_PRIDE_Utilities About PRIDE Utilities]
     * [PRIDEUtilities#Getting_PRIDE_Utilities Getting PRIDE Utilities]
