--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -84,7 +84,10 @@ The source code can be viewed and downloaded from [http://code.google.com/p/prid
 
 ==Screenshots==
 (Click on a screenshot to see the full size version)
-
-[http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/general_tab.png http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/general_tab_small.png]
+<table><tr>
+<td>[http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/general_tab.png http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/general_tab_small.png]</td>
+<td>[http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/protein_tab.png http://pride-toolsuite.googlecode.com/svn/wiki/images/screenshots/pride-inspector/protein_tab_small.png]</td>
+</tr>
+</table>
 
 [PRIDEInspector top of page]
