--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -18,6 +18,13 @@
     * [PRIDEmzGraphBrowser#Source_Code Source Code]
     * [PRIDEmzGraphBrowser#Screenshots Screenshots]
   * [PRIDEQualityChart PRIDE Quality Chart]
+    * [PRIDEQualityChart#About_PRIDE_Chart About PRIDE Quality Chart]
+    * [PRIDEQualityChart#Getting_PRIDE_Chart Getting PRIDE Quality Chart]
+    * [PRIDEQualityChart#Using_PRIDE_Utilities Using PRIDE Quality Chart]
+    * [PRIDEQualityChart#API_Reference API Reference]
+    * [PRIDEQualityChart#FAQs FAQs]
+    * [PRIDEQualityChart#Getting_Help Getting Help]
+    * [PRIDEQualityChart#Source_Code Source Code]
   * [PRIDEXMLJAXB PRIDE XML JAXB]
     * [PRIDEXMLJAXB#About_PRIDE_XML_JAXB About PRIDE XML JAXB]
     * [PRIDEXMLJAXB#Getting_PRIDE_XML_JAXB Getting PRIDE XML JAXB]
