Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -18,9 +18,9 @@
     * [PRIDEmzGraphBrowser#Source_Code Source Code]
     * [PRIDEmzGraphBrowser#Screenshots Screenshots]
   * [PRIDEQualityChart PRIDE Quality Chart]
-    * [PRIDEQualityChart#About_PRIDE_Chart About PRIDE Quality Chart]
-    * [PRIDEQualityChart#Getting_PRIDE_Chart Getting PRIDE Quality Chart]
-    * [PRIDEQualityChart#Using_PRIDE_Utilities Using PRIDE Quality Chart]
+    * [PRIDEQualityChart#About_PRIDE_Quality_Chart About PRIDE Quality Chart]
+    * [PRIDEQualityChart#Getting_PRIDE_Quality_Chart Getting PRIDE Quality Chart]
+    * [PRIDEQualityChart#Using_PRIDE_Quality_Chart Using PRIDE Quality Chart]
     * [PRIDEQualityChart#API_Reference API Reference]
     * [PRIDEQualityChart#FAQs FAQs]
     * [PRIDEQualityChart#Getting_Help Getting Help]
