Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -8,6 +8,13 @@
     * [PRIDEInspector#Getting_Help Getting Help]
     * [PRIDEInspector#Source_Code Source Code]
     * [PRIDEInspector#Screenshots Screenshots]
+  * [http://code.google.com/p/pride-converter/ PRIDE Converter]
+    * [http://code.google.com/p/pride-converter/#About_PRIDE_Converter About PRIDE Converter]
+    * [http://code.google.com/p/pride-converter/#Getting_PRIDE_Converter Getting PRIDE Converter]
+    * [http://code.google.com/p/pride-converter/##How_to_Submitt_Data_to_PRIDE How to Submitt Data to PRIDE]
+    * [http://code.google.com/p/pride-converter/#Getting_Help Getting Help]
+    * [http://code.google.com/p/pride-converter/#Source_Code Source Code]
+    * [http://code.google.com/p/pride-converter/#Screenshots Screenshots]
   * [PRIDEmzGraphBrowser PRIDE mzGraph Browser]
     * [PRIDEmzGraphBrowser#About_mzGraph_Browser About mzGraph Browser]
     * [PRIDEmzGraphBrowser#Getting_mzGraph_Browser Getting mzGraph Browser]
