--- a/wiki/PRIDEQualityChart.wiki
+++ b/wiki/PRIDEQualityChart.wiki
@@ -19,7 +19,7 @@ Using this library, a number of quality charts can be generated which can allow 
  # *Distribution of Precursor Ion Masses Chart*: Displays a frequency distribution of product ion m/z for different precursor ion charges.
  # *Number of Peptides Identified per Protein Chart*: Displays a bar chart with the number of peptides identified per protein for a single PRIDE experiment.
  # *Number of Peaks per Spectrum Chart*: Displays a histogram of number of peaks per MS/MS spectrum in a single PRIDE experiment. 
- # *Delta m/z Chart*: Displays a normalised frequency distribution of theoretical precursor ion mass - experimental precursor ion mass. 
+ # *Delta m/z Chart*: Displays a relative frequency distribution of theoretical precursor ion mass - experimental precursor ion mass. 
  # *Number of Missed Tryptic Cleavages Chart*: . 
 
 Note: the library is still evolving, we are committed to expand this library and add more useful charts. 
