Edited wiki page PRIDEInspector through web user interface.

--- a/wiki/PRIDEInspector.wiki
+++ b/wiki/PRIDEInspector.wiki
@@ -24,7 +24,7 @@ The data formats supported by PRIDE Inspector are:
  * *[http://www.psidev.info/index.php?q=node/257 mzML 1.1]*
  * *[http://www.ebi.ac.uk/pride/schemaXmlspyDocumentation.do PRIDE XML 2.1]* 
 
-*Note*: We do have plan to support additional formats in the near future.
+*Note*: We do have plans to support additional formats in the near future.
 
 [PRIDEInspector top of page]
 
