--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -12,6 +12,9 @@
 
 ----
 == News ==
+*_March 15. 2010:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector Release Version 1.0.4] is now available:*
+ * This version is a major update, it contains a number of bug fixes from the last version (version 1.0.3). 
+
 *_October 26. 2010:_ [http://code.google.com/p/pride-toolsuite/downloads/list PRIDE Inspector 0.7] is now available:*
  * Note: this is a beta release of PRIDE Inspector.
 ----
