--- a/wiki/PRIDEXMLJAXB.wiki
+++ b/wiki/PRIDEXMLJAXB.wiki
@@ -9,7 +9,7 @@
  * [#Source_Code Source Code]
 
 == About PRIDE XML JAXB ==
-PRIDE XML JAXB library is a library for indexing and parsing [http://www.ebi.ac.uk/pride/schemaDocumentation.do PRIDE XML 2.1] files. This library *does not* load the whole file into the memory upfront, instead it employs XML indexing technique to index the file on the fly which gives you fast access and small meomory footprint. Additionaly, all entitites in PRIDE XML file are mapped as objects, and the internal reference between the objects are resolved automatically, this gives you direct access in the object model to entities that are only referenced by ID in the actual XML file.  
+PRIDE XML JAXB library is a library for indexing and parsing [http://www.ebi.ac.uk/pride/schemaDocumentation.do PRIDE XML 2.1] files. This library *does not* load the whole file into the memory up-front, instead it employs XML indexing technique to index the file on the fly which gives you fast access and small meomory footprint. Additionally, all entities in PRIDE XML file are mapped as objects, and the internal reference between the objects are resolved automatically, this gives you direct access in the object model to entities that are only referenced by ID in the actual XML file.  
 
 PRIDE XML JAXB library is written in Java, brought to you by the PRIDE team. 
 
