--- a/wiki/PRIDEChart.wiki
+++ b/wiki/PRIDEChart.wiki
@@ -112,7 +112,7 @@ To come in the future
 [PRIDEChart top of page]
 ----
 == Getting Help ==
-If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-helpdesk at ebi.ac.uk (replace at with @)*.
+If you have questions or need additional help, please contact the PRIDE Helpdesk at the EBI: *pride-support at ebi.ac.uk (replace at with @)*.
 
 Please send us your feedback, including error reports, improvement suggestions, new feature requests and any other things you might want to suggest to the PRIDE team.
 
